--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,13 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# loacla filter
+*.class
+*.apk
+bin/
+gen/
+.settings/
+.classpath
+..project
+proguard/
