--- a/pom.xml
+++ b/pom.xml
@@ -15,5 +15,12 @@
         <module>MessUpTest</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.11.1</version>
+        </dependency>
+    </dependencies>
 
 </project>
