--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>advanced</module>
         <module>advanced3</module>
         <module>MessUpTest</module>
+        <module>SwordOffer</module>
     </modules>
 
     <dependencies>
