--- a/MessUpTest/pom.xml
+++ b/MessUpTest/pom.xml
@@ -11,5 +11,14 @@
 
     <artifactId>MessUpTest</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 
 </project>
